# NordslettenSummerSchool

./: .gitignore  CHANGELOG  License  Makefile  README.md  benchmark.py  demo_0_constructing_deformation_gradient.py  demo_1_hyperelastic_models.py  demo_2_viscoelastic_models.py  demo_3_caputo_approx_benchmark.py  example.py  example_benchmark.py  example_viscoelastic.py  hyperelastic_example.py  pyproject.toml
src/biomechanics/: __init__.py  _interfaces.py
src/biomechanics/fractional/: __init__.py  poly.py
src/biomechanics/kinematics/: __init__.py  biaxial.py  deformation.py  invariants.py  mapping.py  operations.py  uniaxial.py
src/biomechanics/models/: __init__.py  caputoD.py  hydrostatic.py  hyperelastic.py  viscoelastic.py
src/biomechanics/plotting/: plotting.py
src/mittag_leffler/: README.md  mittag_leffler.py
